--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -20,7 +20,27 @@
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
+  <!-- 
+      Notes: 
+        * :root is the highest level you can get (almost like the HTML element)
+  -->
+
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -48,6 +68,19 @@
   </style>
 
   <script>
+    /*
+        querySelectorAll() returns a NodeList and not an Array (meaning we can't do stuff like map/reduce) and we do not need to convert it to an array as the prototype has a forEach method
+    */
+    const inputs = document.querySelectorAll('.controls input'); 
+
+    function handleUpdate() {
+      // dataset is an objec that will contain the attributes from that specifc element
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
   </script>
 
 </body>
