--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -77,23 +77,43 @@
 
   <script>
     const secondHand = document.querySelector('.second-hand');
-    const minHand = document.querySelector('.min-hand');
+    const minuteHand = document.querySelector('.min-hand');
     const hourHand = document.querySelector('.hour-hand');
-
 
     function setDate() {
       const now = new Date();
       const seconds = now.getSeconds();
       const secondsDegrees = ((seconds / 60) * 360) + 90;
+
+      const minutes = now.getMinutes();
+      const minutesDegrees = ((minutes / 60) * 360) + 90;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 24) * 360) + 90;
+
+      if(seconds === 0) {
+        secondHand.style.transition = 'none';
+      } else {
+        secondHand.style.transition = 'all 0.05s';
+      }
+      
+      if(minutes === 0) {
+        minuteHand.style.transition = 'none';
+      } else {
+        minuteHand.style.transition = 'all 0.05s'
+      }
+
+      if(hours === 0) {
+        hourHand.style.transition = 'none';
+      } else {
+        hourHand.style.transition = 'all 0.05s';
+      }
+
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-
-      const mins = now.getMinutes();
-      const minsDegrees = ((mins / 60) * 360) + 90;
-      minHand.style.transform = `rotate(${minsDegrees}deg)`;
-
-      const hours = now.getMinutes();
-      const hoursDegrees = ((hours / 12) * 360) + 90;
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
       hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+
+      console.log(`${hours}:${minutes}:${seconds}`);
     }
 
     setInterval(setDate, 1000);
