--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,29 +18,61 @@
     }
 
     // Regular
+    console.log('hi');
 
     // Interpolated
+    console.log('Hello I am a %s string!', '💩')
 
     // Styled
+    console.log(
+      '%c I am some great text',
+      'font-size: 50px; background: red;'
+    )
 
     // warning!
+    console.warn('oh no!');
 
     // Error :|
+    console.error('huge error');
 
     // Info
+    console.info('insert fun fact here')
 
     // Testing
+    console.assert(1 === 2, 'that is wrong!')
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    const paragraph = document.querySelector('p');
+    console.log(paragraph);
+    console.dir(paragraph);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`He is ${dog.age}`);
+      console.groupEnd(`${dog.name}`);
+    })
 
     // counting
+    console.count('Wes')
+    console.count('Wes')
+    console.count('Wes')
+    console.count('Wes')
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      })
 
+    console.table(dogs);
   </script>
 </body>
 </html>
